[package]
name = "gun_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fisherman = {path="../fisherman"}
winapi = { version = "0.3.9", features = ["winuser", "wincon", "minwindef", "winnt", "libloaderapi", "consoleapi", "fileapi"] }
once_cell = "1.19.0"
widestring = "1.0.2"
walkdir = "2.5.0"
regex = "1.10.4"
