[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-syringe = "0.15.2"
inject-lib = "0.3.3"
keyvalues-parser = "0.2.0"
toml = "0.8.12"
winreg = "0.52.0"
serde = { version = "1.0.197", features = ["derive"] } 
once_cell = "1.19.0"
