[package]
name = "mod_files"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
fisherman = {path="../fisherman"}
winapi = { version = "0.3.9", features = ["winuser", "wincon", "minwindef", "winnt", "libloaderapi", "consoleapi", "fileapi"] }
widestring = "1.0.2"
walkdir = "2.5.0"
regex = "1.10.4"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] } 
once_cell = "1.19.0"
